LBaaS list load_balancer to all needed ui places
LBaaS list load_balancer to all needed ui places, so it displays
correctly.

--- a/app/views/miq_request/_prov_field.html.haml
+++ b/app/views/miq_request/_prov_field.html.haml
@@ -242,7 +242,7 @@
                :vm_tag_2, :vm_tag_3, :vm_tag_4, :vm_tag_5, :vm_tag_6, :vm_tag_7, :vm_tag_8,
                :vm_tag_9, :vm_tag_10, :provision_type, :network_adapters, :retirement,
                :retirement_warn, :cloud_network, :cloud_subnet, :floating_ip_address,
-               :resource_group,
+               :resource_group, :load_balancer,
                :sysprep_auto_logon_count, :sysprep_domain_name, :sysprep_server_license_mode,
                :vlan, :cloud_tenant, :src_configuration_profile_id, :vm_minimum_memory,
                :vm_maximum_memory, :boot_disk_size].include?(field)
