New "load balancer" png and font icon

--- a/app/assets/stylesheets/icon_customizations.scss
+++ b/app/assets/stylesheets/icon_customizations.scss
@@ -255,6 +255,9 @@
 .product-middleware:before {
   content: "\e636";
 }
+.product-load_balancer:before {
+  content: "\e637";
+}
 
 /* define  colors */
 .product-custom-1:before {
