--- a/app/views/configuration/_ui_2.html.haml
+++ b/app/views/configuration/_ui_2.html.haml
@@ -59,15 +59,17 @@
                 .col-md-8
                   %ul.list-inline= render_view_buttons(resource, @edit[:new][:views][resource])
       .col-md-12.col-lg-6
-        - if has_any_role?(%w(ems_middleware_show_list middleware_server_show_list middleware_deployment_show_list middleware_datasource_show_list))
+        - if has_any_role?(%w(ems_middleware_show_list middleware_server_show_list middleware_deployment_show_list middleware_datasource_show_list middleware_domain_show_list middleware_server_group_show_list))
           %fieldset
             %h3
               = _('Middleware')
-            - {:manageiq_providers_middlewaremanager => ["ems_middleware_show_list",        _('Middleware Providers')],
-               :middlewareserver                     => ["middleware_server_show_list",     _('Middleware Servers')],
-               :middlewaredeployment                 => ["middleware_deployment_show_list", _('Middleware Deployments')],
-               :middlewaredatasource                 => ["middleware_datasource_show_list", _('Middleware Datasources')]}.each do |resource, (feature, view_name)|
-              - if role_allows?(:feature => feature)
+            - {:manageiq_providers_middlewaremanager => ["ems_middleware_show_list",           _('Middleware Providers')],
+               :middlewareserver                     => ["middleware_server_show_list",        _('Middleware Servers')],
+               :middlewaredeployment                 => ["middleware_deployment_show_list",    _('Middleware Deployments')],
+               :middlewaredatasource                 => ["middleware_datasource_show_list",    _('Middleware Datasources')],
+               :middlewaredomain                     => ["middleware_domain_show_list",        _('Middleware Domains')],
+               :middlewareservergroup                => ["middleware_server_groups_show_list", _('Middleware Server Groups')]}.each do |resource, (feature, view_name)|
+              - if role_allows(:feature => feature)
                 .form-group
                   %label.col-md-3.control-label
                     #{view_name}
