Remove reference to ui-components css as suggested by @epwinchell when switching views in explorer ajax call instead of pure redirect needs to be called. Images in toolbar lists are fetched from ruby and inserted to JSON object
Remove nested toolbar-pf-actions from dashboard
Add missing property to test case for toolbar builder

--- a/app/views/layouts/angular/_toolbar.html.haml
+++ b/app/views/layouts/angular/_toolbar.html.haml
@@ -2,6 +2,6 @@
      "ng-init" => "toolbarCtrl.initObject('#{j_str(toolbar_from_hash.to_json)}')"}
   %miq-toolbar-menu{"toolbar-items" => "toolbarCtrl.toolbarItems",
                     "toolbar-views" => "toolbarCtrl.dataViews",
-                    "on-view-click" => "toolbarCtrl.onViewClick(item)"}
+                    "on-view-click" => "toolbarCtrl.onViewClick(item, $event)"}
 :javascript
   angular.bootstrap(document.getElementById('miq-toolbar-menu'), ['ManageIQ.toolbar']);
