--- a/app/assets/stylesheets/patternfly_overrides.scss
+++ b/app/assets/stylesheets/patternfly_overrides.scss
@@ -518,3 +518,25 @@ body#dashboard {
 .scrollable {
   overflow: auto;
 }
+
+.toolbar-pf-actions {
+  .toolbar-pf-actions.miq-toolbar-actions {
+    display: inline;
+  }
+}
+
+.form-group.miq-toolbar-group {
+  margin-right: 20px;
+  display: inline-block;
+
+  .miq-custom-html {
+    form{
+      display: inline-block;
+    }
+
+    .form-group {
+      margin-bottom: 0 !important;
+      border-right: 0;
+    }
+  }
+}
