Checkboxes - always trigger a change event when setting checked
https://bugzilla.redhat.com/show_bug.cgi?id=1343659

--- a/app/views/miq_ae_customization/_dialog_import_export.html.haml
+++ b/app/views/miq_ae_customization/_dialog_import_export.html.haml
@@ -69,7 +69,9 @@
      });
 
     $('#check-all').on('change', function (e) {
-      $("table#import-grid tbody input[type='checkbox']").prop('checked', $(this).prop('checked'));
+      $("table#import-grid tbody input[type='checkbox']")
+        .prop('checked', $(this).prop('checked'))
+        .trigger('change');
     });
 
     $("#import-service-dialogs").submit(function (e) {
