--- a/app/views/report/_export_widgets.html.haml
+++ b/app/views/report/_export_widgets.html.haml
@@ -93,9 +93,10 @@
     });
 
     $('#check-all').on('change', function (e) {
-      $("#import-widgets-form table tbody input[type='checkbox']").prop('checked', $(this).prop('checked'));
+      $("#import-widgets-form table tbody input[type='checkbox']")
+        .prop('checked', $(this).prop('checked'))
+        .trigger('change');
     });
-
 
     $('.widget-export').change(function() {
       if ($('.widget-export').val() !== null) {
