--- a/app/views/layouts/_content.html.haml
+++ b/app/views/layouts/_content.html.haml
@@ -61,7 +61,7 @@
               .btn-group
                 .btn.btn-default.resize-left
                   %span.fa.fa-angle-left
-                .btn.btn-default.resize-right{:class => sidewidth == 5 ? 'btn-disabled' : ''}
+                .btn.btn-default.resize-right{:class => sidewidth == 5 ? 'disabled' : ''}
                   %span.fa.fa-angle-right
 
       #left_div.resizable.sidebar-pf.sidebar-pf-left.max-height.scrollable{:class => sidebar}
