--- a/app/views/layouts/_form_buttons_verify.html.haml
+++ b/app/views/layouts/_form_buttons_verify.html.haml
@@ -39,5 +39,5 @@
 
 %div{:id => "#{valtype}_validate_buttons_off", :style => ("display:none" if @edit[statuskey])}
   = button_tag(_("Validate"),
-               :class    => "btn btn-primary btn-disabled btn-xs pull-right",
+               :class    => "btn btn-primary disabled btn-xs pull-right",
                :disabled => true)
