--- a/app/views/layouts/angular/_form_button_submit_angular.html.haml
+++ b/app/views/layouts/angular/_form_button_submit_angular.html.haml
@@ -5,7 +5,7 @@
 
 %div{"ng-show" => ng_show, "ng-controller" => "buttonGroupController"}
   = button_tag(_("Submit"),
-                 :class     => "btn btn-primary btn-disabled",
+                 :class     => "btn btn-primary disabled",
                  :alt       => submit_title_off,
                  :title     => submit_title_off,
                  "ng-show"  => "!saveable(angularForm)",
