--- a/app/views/layouts/listnav/_show_list.html.haml
+++ b/app/views/layouts/listnav/_show_list.html.haml
@@ -61,5 +61,5 @@
       :title                 => t)
   - else
     = button_tag(_("Set Default"),
-      :class => "btn btn-default btn-disabled pull-right",
+      :class => "btn btn-default disabled pull-right",
       :title => _("Select a filter to set it as my default"))
