--- a/app/views/miq_policy/import.html.haml
+++ b/app/views/miq_policy/import.html.haml
@@ -28,7 +28,7 @@
             #buttons
               - if @sb[:conflict]
                 = button_tag("Commit",
-                             :class => "btn btn-primary btn-disabled",
+                             :class => "btn btn-primary disabled",
                              :title => "Resolve conflicts to import the file",
                              :alt   => "Resolve conflicts to import the file")
               - else
