--- a/app/views/ops/_ldap_verify_button.html.haml
+++ b/app/views/ops/_ldap_verify_button.html.haml
@@ -15,5 +15,5 @@
 
 = hidden_div_if(! validate_disabled, :id => "verify_button_off") do
   = button_tag(_("Validate"),
-    :class => "btn btn-primary btn-xs btn-disabled",
+    :class => "btn btn-primary btn-xs disabled",
     :title => _("LDAP Hostname and Port fields are needed to perform verification of LDAP Settings"))
