--- a/app/views/cloud_volume/attach.html.haml
+++ b/app/views/cloud_volume/attach.html.haml
@@ -32,12 +32,12 @@
                        :class        => "btn btn-primary",
                        "ng-click"    => "attachClicked()",
                        "ng-disabled" => "angularForm.$pristine || angularForm.$invalid",
-                       "ng-class"    => "{'btn-disabled': angularForm.$pristine || angularForm.$invalid}")
+                       "ng-class"    => "{'disabled': angularForm.$pristine || angularForm.$invalid}")
           = button_tag("Reset",
                        :class        => "btn btn-primary",
                        "ng-click"    => "resetClicked()",
                        "ng-disabled" => "angularForm.$pristine",
-                       "ng-class"    => "{'btn-disabled': angularForm.$pristine}")
+                       "ng-class"    => "{'disabled': angularForm.$pristine}")
           = button_tag("Cancel",
                         :class     => "btn btn-default",
                         "ng-click" => "cancelAttachClicked()")
