Stop removing new lines in custom html files use different image_path to determine image_url

--- a/app/assets/stylesheets/patternfly_overrides.scss
+++ b/app/assets/stylesheets/patternfly_overrides.scss
@@ -537,6 +537,9 @@ body#dashboard {
     .form-group {
       margin-bottom: 0 !important;
       border-right: 0;
+      &:last-child {
+        padding-right: 0px
+      }
     }
   }
 }
