Add Eric's changes to css files

--- a/app/assets/stylesheets/patternfly_overrides.scss
+++ b/app/assets/stylesheets/patternfly_overrides.scss
@@ -519,21 +519,31 @@ body#dashboard {
   overflow: auto;
 }
 
-.toolbar-pf-actions {
-  .toolbar-pf-actions.miq-toolbar-actions {
-    display: inline;
-  }
+/* begin toolbar styling (to be moved to the ui-components repo) */
+
+.toolbar-pf .form-group { /*compensates for filter-pf not being implemented */
+  padding-left: 0;
 }
 
-.form-group.miq-toolbar-group {
-  margin-right: 20px;
-  display: inline-block;
+.toolbar-pf-actions .btn-group .dropdown button img { /* styling for images (not part of toolbar-pf) */
+  padding-right: 3px;
+}
 
+.toolbar-pf .toolbar-pf-actions .form-group { /* adds padding between buttons when they wrap */
+  margin-bottom: 10px !important
+}
+
+.toolbar-pf .form-group .btn,
+.toolbar-pf .form-group .btn-group { /* overrides _toolbar.scss to account for intermediate Angular markup */
+  margin-left: 5px;
+}
+
+.form-group.miq-toolbar-group { /* fixes the display for the main dashboard toolbar only */
+  display: inline-block;
   .miq-custom-html {
-    form{
+    form {
       display: inline-block;
     }
-
     .form-group {
       margin-bottom: 0 !important;
       border-right: 0;
@@ -543,3 +553,5 @@ body#dashboard {
     }
   }
 }
+
+/* end toolbar styling */
