--- a/app/views/catalog/_sandt_tree_show.html.haml
+++ b/app/views/catalog/_sandt_tree_show.html.haml
@@ -42,7 +42,7 @@
             %label.col-md-2.control-label
               = _('Subtype')
             .col-md-8
-              = h(@generic_subtypes[@record[:generic_subtype]])
+              = h(ServiceTemplate::GENERIC_ITEM_SUBTYPES[@record[:generic_subtype]])
         - if @record.prov_type == "generic_orchestration"
           .form-group
             %label.col-md-2.control-label
