New directive if all days/hours are checked

--- a/app/views/configuration/_timeprofile_form.html.haml
+++ b/app/views/configuration/_timeprofile_form.html.haml
@@ -69,6 +69,7 @@
                                     "bs-switch"      => "",
                                     :checkchange     => "",
                                     'time-type'      => "day",
+                                    'all-time-check' => "{{$index}}",
                                     "min-time-check" => "{{$index}}",
                                    }
         .form-group{"ng-class" => "{'has-error': angularForm.some_days_checked.$error.someTimeCheck}"}
@@ -114,6 +115,7 @@
                                     "bs-switch"      => "",
                                     :checkchange     => "",
                                     'time-type'      => "hour",
+                                    'all-time-check' => "{{$index}}",
                                     'min-time-check' => "{{$index}}",
                                    }
         .form-group
@@ -130,6 +132,7 @@
                                     "bs-switch"      => "",
                                     :checkchange     => "",
                                     'time-type'      => "hour",
+                                    'all-time-check' => "{{$index}}",
                                     'min-time-check' => "{{$index}}",
                                    }
         .form-group
@@ -147,6 +150,7 @@
                                     "bs-switch"      => "",
                                     :checkchange     => "",
                                     'time-type'      => "hour",
+                                    'all-time-check' => "{{$index}}",
                                     'min-time-check' => "{{$index}}",
                                    }
         .form-group
@@ -163,6 +167,7 @@
                                     "bs-switch"      => "",
                                     :checkchange     => "",
                                     'time-type'      => "hour",
+                                    'all-time-check' => "{{$index}}",
                                     'min-time-check' => "{{$index}}",
                                    }
         .form-group{"ng-class" => "{'has-error': angularForm.some_hours_checked.$error.someTimeCheck}"}
