Apply strict-di mode to the 'ManageIQ.toolbar' app

--- a/app/views/layouts/angular/_toolbar.html.haml
+++ b/app/views/layouts/angular/_toolbar.html.haml
@@ -4,4 +4,4 @@
                     "toolbar-views" => "toolbarCtrl.dataViews",
                     "on-view-click" => "toolbarCtrl.onViewClick(item, $event)"}
 :javascript
-  angular.bootstrap(document.getElementById('miq-toolbar-menu'), ['ManageIQ.toolbar']);
+  miq_bootstrap('#miq-toolbar-menu', 'ManageIQ.toolbar');
