--- a/app/views/host/_main.html.haml
+++ b/app/views/host/_main.html.haml
@@ -15,4 +15,5 @@
     = render :partial => "shared/summary/textual", :locals => {:title => _("VC Custom Attributes"), :items => textual_group_ems_custom_attributes}
     = render :partial => "shared/summary/textual", :locals => {:title => _("Authentication Status"), :items => textual_group_authentications}
     = render :partial => "shared/summary/textual", :locals => {:title => _("Cloud Services"), :items => textual_group_cloud_services}
-    = render :partial => "shared/summary/textual_multilink", :locals => {:title => _("OpenStack Status"), :items => textual_group_openstack_status}
+    = render :partial => "shared/summary/textual", :locals => {:title => _("Openstack Hardware"), :items => textual_group_openstack_hardware_status}
+    = render :partial => "shared/summary/textual_multilink", :locals => {:title => _("OpenStack Service Status"), :items => textual_group_openstack_service_status}
