--- a/app/views/shared/views/_prov_dialog.html.haml
+++ b/app/views/shared/views/_prov_dialog.html.haml
@@ -28,9 +28,7 @@
         :dialog                     => dialog,
         :label                      => _("Select Tags to apply"),
         :prefix                     => "/miq_request/",
-        :keys                       => keys,
-        :table_class                => "tagstable",
-        :extra_table_attributes     => "cellspacing=1"})
+        :keys                       => keys})
   - when :service
     - keys = wf.kind_of?(ManageIQ::Providers::Redhat::InfraManager::ProvisionWorkflow) ? [:src_vm_id, :provision_type, :linked_clone] : [:vm_filter, :src_vm_id, :provision_type, :linked_clone, :snapshot]
     - label = wf.kind_of?(ManageIQ::Providers::Redhat::InfraManager::ProvisionWorkflow) ? _("Selected VM") : _("Select")
@@ -39,8 +37,7 @@
         :dialog                     => dialog,
         :label                      => label,
         :prefix                     => "/miq_request/",
-        :keys                       => keys,
-        :extra_table_attributes     => "width=100%"})
+        :keys                       => keys})
     - if wf.supports_pxe?
       - keys = [:pxe_server_id, :pxe_image_id, :windows_image_id]
       = render(:partial => "/miq_request/prov_dialog_fieldset",
@@ -48,8 +45,7 @@
           :dialog                     => dialog,
           :label                      => _("PXE"),
           :prefix                     => "/miq_request/",
-          :keys                       => keys,
-          :extra_table_attributes     => "width=100%"})
+          :keys                       => keys})
     - if wf.supports_iso?
       - keys = [:iso_image_id]
       = render(:partial => "/miq_request/prov_dialog_fieldset",
@@ -57,8 +53,7 @@
           :dialog                     => dialog,
           :label                      => _("ISO"),
           :prefix                     => "/miq_request/",
-          :keys                       => keys,
-          :extra_table_attributes     => "width=100%"})
+          :keys                       => keys})
     - keys = [:number_of_vms]
     - label = wf.kind_of?(ManageIQ::Providers::CloudManager::ProvisionWorkflow) ? _("Number of Instances") : _("Number of VMs")
     = render(:partial => "/miq_request/prov_dialog_fieldset",
@@ -127,8 +122,7 @@
           :dialog                     => dialog,
           :label                      => title_for_host,
           :prefix                     => "/miq_request/",
-          :keys                       => keys,
-          :extra_table_attributes     => "width=100%"})
+          :keys                       => keys})
       - unless wf.kind_of?(ManageIQ::Providers::CloudManager::ProvisionWorkflow)
         - keys = [:ds_filter, :placement_storage_profile, :placement_ds_name]
         = render(:partial => "/miq_request/prov_dialog_fieldset",
@@ -136,8 +130,7 @@
             :dialog                     => dialog,
             :label                      => _("Datastore"),
             :prefix                     => "/miq_request/",
-            :keys                       => keys,
-            :extra_table_attributes     => "width=100%"})
+            :keys                       => keys})
       - if wf.kind_of?(ManageIQ::Providers::CloudManager::ProvisionWorkflow)
         - keys = [:cloud_tenant, :availability_zone_filter, :placement_availability_zone, :cloud_network, :cloud_subnet, :security_groups, :floating_ip_address, :resource_group]
         = render(:partial => "/miq_request/prov_dialog_fieldset",
@@ -145,8 +138,7 @@
             :dialog                     => dialog,
             :label                      => _("Placement - Options"),
             :prefix                     => "/miq_request/",
-            :keys                       => keys,
-            :extra_table_attributes     => "width=100%"})
+            :keys                       => keys})
   - when :hardware
     - keys = [:instance_type, :number_of_cpus, :number_of_sockets, :cores_per_socket,
               :vm_memory, :network_adapters, :disk_format, :guest_access_key_pair, :monitoring,
@@ -203,8 +195,7 @@
             :dialog                     => dialog,
             :label                      => _("Custom Specification"),
             :prefix                     => "/miq_request/",
-            :keys                       => keys,
-            :extra_table_attributes     => "width=100%"})
+            :keys                       => keys})
         - if @sb[:vm_os] == "windows"
           - keys = [:sysprep_timezone, :sysprep_auto_logon, :sysprep_auto_logon_count, :sysprep_password]
           = render(:partial => "/miq_request/prov_dialog_fieldset",
