--- a/app/views/middleware_topology/show.html.haml
+++ b/app/views/middleware_topology/show.html.haml
@@ -29,6 +29,14 @@
             %text{:x => "0", :y => "6", :class => "fa fa-database glyph"} &#xF1C0;
         %label
           = _("Middleware Datasources")
+      %kubernetes-topology-icon{tooltipOptions, :kind => "MiddlewareMessaging"}
+        %svg.kube-topology
+          %g.MiddlewareMessaging{:transform => "translate(21, 21)"}
+            %circle{:r => "17"}
+            -# fa-exchange (placeholder)
+            %text{:x => "0", :y => "6", :class => "fa fa-exchange glyph"} &#xF0EC;
+        %label
+          = _("Message Destinations")
       %kubernetes-topology-icon{tooltipOptions, :kind => "Vm"}
         %svg.kube-topology
           %g.EntityLegend.Infra
