Remove old "admintable" class table styling
https://www.pivotaltracker.com/n/projects/1613907/stories/129462395

--- a/app/views/layouts/_multi_auth_credentials.html.haml
+++ b/app/views/layouts/_multi_auth_credentials.html.haml
@@ -111,10 +111,10 @@
                 = _("Used for access to IPMI.")
 
   - unless session[:host_items].nil?
-    %table.admintable
+    %table.table.table-bordered
       %tbody
         %tr
-          %td.key= _("Select %{host} to validate against") % {:host => title_for_host}
+          %td= _("Select %{host} to validate against") % {:host => title_for_host}
           %td
             = select_tag('validate_id',
                          options_for_select(@edit[:selected_hosts].invert.sort,
