--- a/app/views/dashboard/login.html.haml
+++ b/app/views/dashboard/login.html.haml
@@ -15,7 +15,7 @@
                  :locals  => {:login => true})
 
         #invalid_sso_credentials_flash{:style => "display: none"}
-          #flash_text_div{:title => "Click to remove message"}
+          #flash_text_div{:title => _("Click to remove message")}
             .alert.alert-danger
               %span.pficon.pficon-error-circle-o
               %strong= _("Invalid Single Sign-On credentials")
