--- a/app/views/chargeback/_reports_list.html.haml
+++ b/app/views/chargeback/_reports_list.html.haml
@@ -40,7 +40,7 @@
               - t = _("Click to view saved report")
               %td{:title => t, :onclick => remote_function(:loading => "miqSparkle(true);",
                 :complete => "miqSparkle(false);", :url => {:action => 'tree_select', :id => row_id})}
-                %i.fa.fa-2x.fa-clock-o{:title => "Saved Report: #{row['name']}"}
+                %i.fa.fa-2x.fa-clock-o{:title => _("Saved Report: %{report_name}") % {:report_name => row['name']}}
               %td{:title => t, :onclick => remote_function(:loading => "miqSparkle(true);",
                 :complete => "miqSparkle(false);", :url => {:action => 'tree_select', :id => row_id})}
                 = h(format_timezone(row['last_run_on'], Time.zone, "gtl"))
