--- a/app/views/cloud_volume/attach.html.haml
+++ b/app/views/cloud_volume/attach.html.haml
@@ -28,17 +28,17 @@
     %tr
       %td{:align => 'right'}
         #buttons_on
-          = button_tag("Attach",
+          = button_tag(_("Attach"),
                        :class        => "btn btn-primary",
                        "ng-click"    => "attachClicked()",
                        "ng-disabled" => "angularForm.$pristine || angularForm.$invalid",
                        "ng-class"    => "{ disabled: angularForm.$pristine || angularForm.$invalid}")
-          = button_tag("Reset",
+          = button_tag(_("Reset"),
                        :class        => "btn btn-primary",
                        "ng-click"    => "resetClicked()",
                        "ng-disabled" => "angularForm.$pristine",
                        "ng-class"    => "{ disabled: angularForm.$pristine}")
-          = button_tag("Cancel",
+          = button_tag(_("Cancel"),
                         :class     => "btn btn-default",
                         "ng-click" => "cancelAttachClicked()")
 
