--- a/app/views/miq_policy/_event_list.html.haml
+++ b/app/views/miq_policy/_event_list.html.haml
@@ -10,7 +10,7 @@
       %table.table.table-striped.table-bordered.table-hover
         %tbody
           - @events.each do |e|
-            %tr{:title => ("View this Event"),
+            %tr{:title => _("View this Event"),
               :onclick => "miqDynatreeActivateNode('event_tree', 'ev-#{to_cid(e.id)}');"}
               %td.narrow
                 %img{:src => image_path("100/event-#{e.name}.png")}
