Added NG numeric validation for port

--- a/app/views/layouts/angular-bootstrap/_endpoints_angular.html.haml
+++ b/app/views/layouts/angular-bootstrap/_endpoints_angular.html.haml
@@ -45,7 +45,10 @@
                           "detect-spaces"               => "",
                           "prefix"                      => "#{prefix}",
                           "reset-validation-depends-on" => %w(hawkular metrics).include?(prefix) ? "#{prefix}_hostname" : "",
-                          "reset-validation-status"     => "#{prefix}_auth_status"}
+                          "reset-validation-status"     => "#{prefix}_auth_status",
+                          "pattern"                     => "^[1-9]\\d*$"}
+      %span.help-block{"ng-show" => "angularForm.#{prefix}_api_port.$error.pattern"}
+        = _("Must be a number (greater than 0)")
       %span.help-block{"ng-show" => "angularForm.#{prefix}_api_port.$error.required"}
         = _("Required")
       %span.help-block{"ng-show" => "angularForm.#{prefix}_api_port.$error.detectedSpaces"}
