Topology: fix style issue w/ variable name in container view.

--- a/app/views/container_topology/show.html.haml
+++ b/app/views/container_topology/show.html.haml
@@ -1,9 +1,9 @@
-- tooltipOptions = {"tooltip-placement" => "bottom", "tooltip" => "{{legendTooltip}}"}
+- tooltip_options = {"tooltip-placement" => "bottom", "tooltip" => "{{legendTooltip}}"}
 .container_topology{'ng-controller' => "containerTopologyController"}
   .legend
     %label#selected
     %div{'ng-if' => "kinds"}
-      %kubernetes-topology-icon{tooltipOptions, :kind => "ContainerReplicator"}
+      %kubernetes-topology-icon{tooltip_options, :kind => "ContainerReplicator"}
         %svg.kube-topology
           %g.EntityLegend.Containers
             %circle{:r => "17"}
@@ -11,7 +11,7 @@
             %text{:y => "8"} &#xE624;
         %label
           = _("Replicators")
-      %kubernetes-topology-icon{tooltipOptions, :kind => "ContainerGroup"}
+      %kubernetes-topology-icon{tooltip_options, :kind => "ContainerGroup"}
         %svg.kube-topology
           %g.EntityLegend.Containers.Pod
             %circle{:r => "17"}
@@ -19,7 +19,7 @@
             %text{:x => "1", :y => "6"} &#xF1B3;
         %label
           = _("Pods")
-      %kubernetes-topology-icon{tooltipOptions, :kind => "Container"}
+      %kubernetes-topology-icon{tooltip_options, :kind => "Container"}
         %svg.kube-topology
           %g.EntityLegend.Containers.Container
             %circle{:r => "17"}
@@ -27,7 +27,7 @@
             %text{:y => "7"} &#xF1B2;
         %label
           = _("Containers")
-      %kubernetes-topology-icon{tooltipOptions, :kind => "ContainerService"}
+      %kubernetes-topology-icon{tooltip_options, :kind => "ContainerService"}
         %svg.kube-topology
           %g.EntityLegend.Containers
             %circle{:r => "17"}
@@ -35,7 +35,7 @@
             %text{:x => "-2", :y => "10"} &#xE61E;
         %label
           = _("Services")
-      %kubernetes-topology-icon{tooltipOptions, :kind => "ContainerRoute"}
+      %kubernetes-topology-icon{tooltip_options, :kind => "ContainerRoute"}
         %svg.kube-topology
           %g.EntityLegend.Containers
             %circle{:r => "17"}
@@ -43,7 +43,7 @@
             %text{:y => "8"} &#xE625;
         %label
           = _("Routes")
-      %kubernetes-topology-icon{tooltipOptions, :kind => "ContainerNode"}
+      %kubernetes-topology-icon{tooltip_options, :kind => "ContainerNode"}
         %svg.kube-topology
           %g.EntityLegend.Containers
             %circle{:r => "17"}
@@ -51,7 +51,7 @@
             %text{:y => "9"} &#xE621;
         %label
           = _("Nodes")
-      %kubernetes-topology-icon{tooltipOptions, :kind => "Vm"}
+      %kubernetes-topology-icon{tooltip_options, :kind => "Vm"}
         %svg.kube-topology
           %g.EntityLegend.Infra
             %circle{:r => "17"}
@@ -59,7 +59,7 @@
             %text{:y => "9"} &#xE90f;
         %label
           = _("VMs")
-      %kubernetes-topology-icon{tooltipOptions, :kind => "Host"}
+      %kubernetes-topology-icon{tooltip_options, :kind => "Host"}
         %svg.kube-topology
           %g.EntityLegend.Infra
             %circle{:r => "17"}
