--- a/app/views/miq_ae_class/_ns_list.html.haml
+++ b/app/views/miq_ae_class/_ns_list.html.haml
@@ -7,7 +7,7 @@
     %table#ns_list_grid.table.table-striped.table-bordered.table-hover.table-clickable.table-checkable
       %thead
         %th.narrow
-          %input{:type => 'checkbox', :title => _('Check All')}
+          %input.checkall{:type => 'checkbox', :title => _('Check All')}
         %th
         %th= _('Name')
         %th= _('Description')
