--- a/app/views/miq_ae_class/_class_methods.html.haml
+++ b/app/views/miq_ae_class/_class_methods.html.haml
@@ -6,7 +6,7 @@
       %table#class_methods_grid.table.table-striped.table-bordered.table-hover.table-clickable.table-checkable
         %thead
           %th.narrow
-            %input{:type => 'checkbox', :title => _('Check All')}
+            %input.checkall{:type => 'checkbox', :title => _('Check All')}
           %th
           %th
         %tbody{'data-click-url' => '/miq_ae_class/tree_select/'}
