--- a/app/views/miq_ae_class/_ns_details.html.haml
+++ b/app/views/miq_ae_class/_ns_details.html.haml
@@ -5,7 +5,7 @@
     %table#ns_details_grid.table.table-striped.table-bordered.table-hover.table-clickable.table-checkable
       %thead
         %th.narrow
-          %input{:type => 'checkbox', :title => _('Check All')}
+          %input.checkall{:type => 'checkbox', :title => _('Check All')}
         %th
         %th
       %tbody{'data-click-url' => '/miq_ae_class/tree_select/'}
