Node with selected kid/kids is expanded

--- a/app/views/ops/_rbac_group_details.html.haml
+++ b/app/views/ops/_rbac_group_details.html.haml
@@ -180,6 +180,7 @@
         = _("This user is limited to items with the selected tags.")
         %br/
         %br/
+        :javascript
           miqDynatreeResetState('#{j_str @tags_tree.name}');
         = render(:partial => 'shared/tree', :locals => {:tree => @tags_tree, :name => @tags_tree.name})
       = miq_tab_content('hosts_clusters') do
